[package]
name = "bitreel"
version = "0.1.0"
authors = ["J/A <archer884@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/archer884/bitreel"
homepage = "https://github.com/archer884/bitreel"
keywords = ["video", "youtube"]
categories = ["multimedia::video"]
readme = "README.md"
description = """
A library for getting video information from YouTube and other similar sites.
"""

[dependencies]
url = "1.5"
