[package]
name = "bitreel"
version = "0.2.0"
authors = ["J/A <archer884@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/archer884/bitreel"
homepage = "https://github.com/archer884/bitreel"
keywords = ["video", "youtube"]
categories = ["multimedia::video"]
readme = "README.md"
description = """
A library for getting video information from YouTube and other similar sites.
"""

[features]
default = ["default-connector"]
default-connector = ["reqwest"]

[dependencies]
regex = "0.2"
url = "1.5"

[dependencies.reqwest]
version = "0.7"
optional = true
